<resources>
    <string name="app_name">Paninti</string>
    <string name="welcome">Selamat Datang, Parents!</string>
    <string name="email_username">Email atau Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="log_in">Masuk</string>
    <string name="sign_up">Daftar</string>
    <string name="or">Atau</string>
    <string name="google">Lanjutkan dengan Google</string>
    <string name="dont_have_account_yet">Belum punya akun? Daftar Sekarang</string>
    <string name="already_have_account">Sudah punya akun? Masuk Sekarang</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="username">Username</string>
    <string name="email">Alamat Email</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="male">Laki-laki</string>
    <string name="female">Perempuan</string>

    <!-- Validasi form login & register -->
    <string name="null_full_name">Nama lengkap wajib diisi</string>
    <string name="null_username">Username wajib diisi</string>
    <string name="null_email">Email wajib diisi</string>
    <string name="null_email_username">Email atau Username wajib diisi</string>
    <string name="null_password">Password wajib diisi</string>
    <string name="null_confirm_password">Konfirmasi password wajib diisi</string>
    <string name="min_full_name">Nama lengkap minimal 2 karakter</string>
    <string name="valid_full_name">Nama lengkap tidak bisa berisi angka</string>
    <string name="min_username">Username minimal berisi 6 karakter</string>
    <string name="valid_username">Username tidak bisa menggunakan simbol selain . dan _</string>
    <string name="valid_email">Format email tidak sesuai</string>
    <string name="min_password">Password minimal berisi 6 karakter, 1 huruf kapital dan 1 angka</string>
    <string name="valid_password">Password minimal berisi 1 huruf kapital dan 1 angka</string>
    <string name="valid_confirm_password">Konfirmasi password tidak sesuai</string>

    <string name="seven_days">7 Days</string>
    <string name="next_seven_days">7 days</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="per_17">/ 17°</string>
    <string name="celcius_17">17°</string>
    <string name="celcius_18">18°</string>
    <string name="celcius_22">22°</string>
    <string name="celcius_24">24°</string>
    <string name="cel_24">24</string>
    <string name="celcius_29">29°</string>
    <string name="celcius_30">30°</string>
    <string name="celcius">°C</string>
    <string name="date">Monday, 17 May</string>
    <string name="location">Minsk</string>
    <string name="cloudy">Cloudy</string>
    <string name="rainy">Rainy</string>
    <string name="storm">Storm</string>
    <string name="sunny">Sunny</string>
    <string name="wind_speed">13 km/h</string>
    <string name="wind">Wind</string>
    <string name="humidity_percent">24%</string>
    <string name="humidity">Humidity</string>
    <string name="chance_percent">82%</string>
    <string name="chance_of_rain">Chance of rain</string>
    <string name="clock_10">10:00</string>
    <string name="clock_11">11:00</string>
    <string name="clock_12">12:00</string>
    <string name="clock_13">13:00</string>

</resources>