<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_black">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvGradient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/black_primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvCelcius"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/celcius"
                        android:textAppearance="@style/TextAppearance.Title1"
                        android:textColor="@color/white"
                        android:layout_marginTop="@dimen/screen_margin"
                        android:layout_marginStart="@dimen/screen_margin"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imgMenuVertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/screen_margin"
                        android:layout_marginEnd="@dimen/screen_margin"
                        android:src="@drawable/img_menu_vertical"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imgPin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/normal_margin"
                        android:src="@drawable/ic_pin"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.44"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/imgMenuVertical" />

                    <TextView
                        android:id="@+id/tvLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/normal_margin"
                        android:text="@string/location"
                        android:textAppearance="@style/TextAppearance.Subtitle1"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.56"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/imgMenuVertical" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imgCloudy"
                        android:layout_width="@dimen/cloud_width_height"
                        android:layout_height="@dimen/cloud_width_height"
                        android:layout_marginTop="@dimen/screen_margin"
                        android:src="@drawable/img_cloudy"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/imgPin" />

                    <TextView
                        android:id="@+id/tvCelcius29"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/celcius_29"
                        android:textAppearance="@style/TextAppearance.Weather.LargeTitle"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/imgCloudy" />

                    <TextView
                        android:id="@+id/tvWeather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cloudy"
                        android:textAppearance="@style/TextAppearance.Weather.Title"
                        android:textColor="@color/yellow"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvCelcius29" />

                    <TextView
                        android:id="@+id/tvDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textAppearance="@style/TextAppearance.Body2"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvWeather" />

                    <View
                        android:id="@+id/viewLine"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/view_height"
                        android:layout_marginHorizontal="@dimen/semi_huge_margin"
                        android:layout_marginVertical="@dimen/large_margin"
                        android:visibility="visible"
                        android:background="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvDate"/>

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imgWind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/screen_margin"
                        android:src="@drawable/ic_wind"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.13"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/viewLine" />

                    <TextView
                        android:id="@+id/tvWindSpeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/extra_small_margin"
                        android:text="@string/wind_speed"
                        android:textAppearance="@style/TextAppearance.Caption1"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.12"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/imgWind" />

                    <TextView
                        android:id="@+id/tvWind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/extra_small_margin"
                        android:layout_marginBottom="@dimen/screen_margin"
                        android:text="@string/wind"
                        android:textAppearance="@style/TextAppearance.Caption1"
                        android:textColor="@color/label_tertiary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.135"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvWindSpeed" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imgHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/screen_margin"
                        android:src="@drawable/ic_humidity"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/viewLine" />

                    <TextView
                        android:id="@+id/tvHumidityPercent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/extra_small_margin"
                        android:text="@string/humidity_percent"
                        android:textAppearance="@style/TextAppearance.Caption1"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/imgHumidity" />

                    <TextView
                        android:id="@+id/tvHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/extra_small_margin"
                        android:layout_marginBottom="@dimen/screen_margin"
                        android:text="@string/humidity"
                        android:textAppearance="@style/TextAppearance.Caption1"
                        android:textColor="@color/label_tertiary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvHumidityPercent" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imgRain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/screen_margin"
                        android:src="@drawable/ic_moisture"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.87"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/viewLine" />

                    <TextView
                        android:id="@+id/tvChancePercent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/extra_small_margin"
                        android:text="@string/chance_percent"
                        android:textAppearance="@style/TextAppearance.Caption1"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.86"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/imgRain" />

                    <TextView
                        android:id="@+id/tvChanceOfRain"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/extra_small_margin"
                        android:layout_marginBottom="@dimen/screen_margin"
                        android:text="@string/chance_of_rain"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.Caption1"
                        android:textColor="@color/label_tertiary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.89"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvChancePercent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tvToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginStart="@dimen/screen_margin"
                android:text="@string/today"
                android:textAppearance="@style/TextAppearance.Title"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvGradient" />

            <TextView
                android:id="@+id/tvNextSevenDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/semi_huge_margin"
                android:text="@string/next_seven_days"
                android:textAppearance="@style/TextAppearance.Body2"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvGradient" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgForward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/small_margin"
                android:src="@drawable/ic_forward"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvGradient" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvWeatherDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvToday"
                tools:listitem="@layout/item_weather_day" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>
